--- a/choicepage.html
+++ b/choicepage.html
@@ -13,9 +13,12 @@
   </head>
   <body>
     <header>
-      <h1>Choose Your Education Path</h1>
+      <h1><span class="E_span">E</span><span class="Q_span">Q</span></h1>
+      <a href="settings.html"><i class="fa-solid fa-gear"></i></a>
     </header>
+
     <main>
+      <h2>Choose Your Education Path</h2>
       <form id="educationForm">
         <label for="education_stages">Education Stage</label>
         <select id="education_stages" required>
@@ -36,7 +39,7 @@
         </select>
 
         <button type="button" id="startTestBtn" style="display: none">
-          Start Test
+          Start Quiz
         </button>
       </form>
     </main>
