--- a/index.html
+++ b/index.html
@@ -3,72 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>start</title>
-    <style>
-      /* styles.css */
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #007bff;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-      }
-
-      #splash-screen {
-        text-align: center;
-        animation: fadeIn 1s ease-in-out;
-      }
-
-      #splash-title {
-        font-size: 5rem;
-        margin-bottom: 10px;
-      }
-
-      #splash-text {
-        font-size: 1.5rem;
-      }
-
-      #dote1 {
-        animation: fadeInOut 3s infinite;
-      }
-      #dote2 {
-        animation: fadeInOut 3.2s infinite;
-      }
-      #dote3 {
-        animation: fadeInOut 3.4s infinite;
-      }
-      #dote4 {
-        animation: fadeInOut 3.8s infinite;
-      }
-      #dote5 {
-        animation: fadeInOut 4s infinite;
-      }
-      #dote6 {
-        animation: fadeInOut 4.2s infinite;
-      }
-      #dote7 {
-        animation: fadeInOut 4.4s infinite;
-      }
-      #dote8 {
-        animation: fadeInOut 4.8s infinite;
-      }
-
-      @keyframes fadeInOut {
-        0%,
-        100% {
-          opacity: 0;
-        }
-        50% {
-          opacity: 1;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <title>EduQuiz</title>
   </head>
-  <body>
+  <body class="index_page_style">
     <div id="splash-screen">
       <h1 id="splash-title">Hello</h1>
       <p id="splash-text">
@@ -80,7 +18,6 @@
     </div>
     <script>
       let storedUser = JSON.parse(localStorage.getItem("user_info"));
-
       // التحقق من وجود بيانات مسجلة
       if (!storedUser) {
         window.location.href = "signup.html";
@@ -88,9 +25,8 @@
         function setTime() {
           setTimeout(() => {
             window.location.href = "choicepage.html";
-          }, 2000); // الانتظار لمدة 2000 مللي ثانية (2 ثانية) قبل التوجيه
+          }, 2000);// 2000 // الانتظار لمدة 2000 مللي ثانية (2 ثانية) قبل التوجيه
         }
-
         setTime(); // استدعاء الدالة بعد تحميل الصفحة
       }
     </script>
