--- a/questions.html
+++ b/questions.html
@@ -11,8 +11,8 @@
     <title>Questions</title>
 </head>
 <body>
-    <header>
-        <h3 id="questionTitle">Loading...</h3>
+    <header class="question_header">
+        <h1 id="questionTitle">Loading...</span></h1>
     </header>
     <main>
         <div id="questionContainer">
