--- a/login.html
+++ b/login.html
@@ -1,120 +1,120 @@
 <!DOCTYPE html>
 <html lang="ar">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Login</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Login</title>
+</head>
+
+<body>
+  <header class="sign_header">
     <h1>Login</h1>
+  </header>
 
-    <form id="userForm" class="userForm">
-      <!-- email -->
-      <label for="email">Email</label>
-      <input type="email" id="email" required placeholder="Enter your email" />
-      <span class="error-text" id="email_error">Invalid email format</span>
+  <form id="userForm" class="userForm">
+    <!-- email -->
+    <label for="email">Email</label>
+    <input type="email" id="email" required placeholder="Enter your email" />
+    <span class="error-text" id="email_error">Invalid email format</span>
 
-      <!-- password -->
-      <label for="password">Password</label>
-      <div class="password-container">
-        <input type="password" id="password" required placeholder="********" />
-        <i
-          class="fas fa-eye toggle-password"
-          onclick="togglePassword('password')"
-        ></i>
-      </div>
-      <span class="error-text" id="password_error">Invalid password</span>
+    <!-- password -->
+    <label for="password">Password</label>
+    <div class="password-container">
+      <input type="password" id="password" required placeholder="********" />
+      <i class="fas fa-eye-slash toggle-password" onclick="togglePassword('password')"></i>
+    </div>
+    <span class="error-text" id="password_error">Invalid password</span>
 
-      <!-- forget password -->
-      <p class="action-link"><a href="#">Forgot password?</a></p>
-      <button type="button" onclick="registerUser()">Log in</button>
-      <p class="action-link">
-        I don't have an account <a href="signup.html">Signup</a>
-      </p>
+    <!-- forget password -->
+    <p class="action-link"><a href="#">Forgot password?</a></p>
+    <button type="button" onclick="registerUser()">Log in</button>
+    <p class="action-link">
+      I don't have an account <a href="signup.html">Signup</a>
+    </p>
 
-      <p class="OR">OR</p>
-      <!-- social section -->
-      <div class="social-login">
-        <button type="button" class="google-btn" onclick="loginWithGoogle()">
-          <i class="fab fa-google"></i>
-        </button>
-        <button
-          type="button"
-          class="facebook-btn"
-          onclick="loginWithFacebook()"
-        >
-          <i class="fab fa-facebook"></i>
-        </button>
-        <button type="button" class="twitter-btn" onclick="loginWithTwitter()">
-          <i class="fab fa-twitter"></i>
-        </button>
-      </div>
-    </form>
-<a href="index.html">home</a>
-    <script>
-      function registerUser() {
-        let storedUser = JSON.parse(localStorage.getItem("user_info"));
+    <p class="OR">OR</p>
+    <!-- social section -->
+    <div class="social-login">
+      <button type="button" class="google-btn" onclick="loginWithGoogle()">
+        <i class="fab fa-google"></i>
+      </button>
+      <button type="button" class="facebook-btn" onclick="loginWithFacebook()">
+        <i class="fab fa-facebook"></i>
+      </button>
+      <button type="button" class="twitter-btn" onclick="loginWithTwitter()">
+        <i class="fab fa-twitter"></i>
+      </button>
+    </div>
+  </form>
+  <script>
+    function registerUser() {
+      let storedUser = JSON.parse(localStorage.getItem("user_info"));
 
-        let emailInput = document.getElementById("email").value.trim();
-        let passwordInput = document.getElementById("password").value.trim();
+      let emailInput = document.getElementById("email").value.trim();
+      let passwordInput = document.getElementById("password").value.trim();
 
-        let emailError = document.getElementById("email_error");
-        let passwordError = document.getElementById("password_error");
+      let emailError = document.getElementById("email_error");
+      let passwordError = document.getElementById("password_error");
 
-        // التحقق من وجود بيانات مسجلة
-        if (!storedUser) {
-          alert("❌ لا يوجد حساب مسجل. قم بإنشاء حساب أولاً.");
-          window.location.href = "signup.html";
-          return;
-        }
-
-        // التحقق من البريد الإلكتروني
-        if (emailInput !== storedUser.email) {
-          emailError.style.display = "block";
-        } else {
-          emailError.style.display = "none";
-        }
-
-        // التحقق من كلمة المرور
-        if (passwordInput !== storedUser.password) {
-          passwordError.style.display = "block";
-        } else {
-          passwordError.style.display = "none";
-        }
-
-        // تسجيل الدخول الناجح
-        if (
-          emailInput === storedUser.email &&
-          passwordInput === storedUser.password
-        ) {
-          window.location.href = "#"; // توجيه المستخدم إلى الصفحة الرئيسية
-        }
+      // التحقق من وجود بيانات مسجلة
+      if (!storedUser) {
+        alert("❌ لا يوجد حساب مسجل. قم بإنشاء حساب أولاً.");
+        window.location.href = "signup.html";
+        return;
       }
 
-      function togglePassword(fieldId) {
-        let field = document.getElementById(fieldId);
-        let icon = field.nextElementSibling;
-        field.type = field.type === "password" ? "text" : "password";
-        icon.classList.toggle("fa-eye-slash");
+      // التحقق من البريد الإلكتروني
+      if (emailInput !== storedUser.email) {
+        emailError.style.display = "block";
+      } else {
+        emailError.style.display = "none";
       }
 
-      function loginWithGoogle() {
-        window.location.href = "index.html"; // محاكاة تسجيل الدخول الناجح
+      // التحقق من كلمة المرور
+      if (passwordInput !== storedUser.password) {
+        passwordError.style.display = "block";
+      } else {
+        passwordError.style.display = "none";
       }
 
-      function loginWithFacebook() {
-        window.location.href = "index.html";
+      // تسجيل الدخول الناجح
+      if (
+        emailInput === storedUser.email &&
+        passwordInput === storedUser.password
+      ) {
+        alert(`Wellcome Back ${storedUser.first_name
+        } ☺️`)
+        window.location.href = "choicepage.html"; // توجيه المستخدم إلى الصفحة الرئيسية
       }
+    }
 
-      function loginWithTwitter() {
-        window.location.href = "index.html";
-      }
-    </script>
-  </body>
+    function togglePassword(fieldId) {
+      let field = document.getElementById(fieldId);
+      let icon = field.parentElement.querySelector(".toggle-password");
+
+      // تبديل نوع الحقل بين password و text
+      field.type = field.type === "password" ? "text" : "password";
+
+      // تبديل الأيقونة بين fa-eye و fa-eye-slash
+      icon.classList.toggle("fa-eye");
+      icon.classList.toggle("fa-eye-slash");
+    }
+
+    function loginWithGoogle() {
+      window.location.href = "index.html"; // محاكاة تسجيل الدخول الناجح
+    }
+
+    function loginWithFacebook() {
+      window.location.href = "index.html";
+    }
+
+    function loginWithTwitter() {
+      window.location.href = "index.html";
+    }
+  </script>
+</body>
+
 </html>
