--- a/settings.html
+++ b/settings.html
@@ -69,7 +69,7 @@
         }
       }
       function clearLocalStorage() {
-        // localStorage.clear();
+         localStorage.clear();
         window.location.href = "index.html";
       }
       function hiddenSignOutOption() {
