--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <h1>SignUp</h1>
+    <header class="sign_">
+      <h1>SignUp</h1>
+    </header>
 
     <form id="userForm" class="userForm">
       <!-- first name -->
@@ -68,7 +70,7 @@
           placeholder="yvhu%#:&-+36:7!8"
         />
         <i
-          class="fas fa-eye toggle-password"
+          class="fas fa-eye-slash toggle-password"
           onclick="togglePassword('password')"
         ></i>
       </div>
@@ -87,7 +89,7 @@
           placeholder="yvhu%#:&-+36:7!"
         />
         <i
-          class="fas fa-eye toggle-password"
+          class="fas fa-eye-slash toggle-password"
           onclick="togglePassword('confirmPassword')"
         ></i>
       </div>
@@ -214,11 +216,16 @@
       }
 
       function togglePassword(fieldId) {
-        let field = document.getElementById(fieldId);
-        let icon = field.nextElementSibling;
-        field.type = field.type === "password" ? "text" : "password";
-        icon.classList.toggle("fa-eye-slash");
-      }
+    let field = document.getElementById(fieldId);
+    let icon = field.parentElement.querySelector(".toggle-password");
+
+    // تبديل نوع الحقل بين password و text
+    field.type = field.type === "password" ? "text" : "password";
+
+    // تبديل الأيقونة بين fa-eye و fa-eye-slash
+    icon.classList.toggle("fa-eye");
+    icon.classList.toggle("fa-eye-slash");
+}
 
       function loginWithGoogle() {
         window.location.href = "choicepage.html"; // توجيه المستخدم إلى الصفحة الرئيسية بعد النجاح
